<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">R2000</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="service_address">Service Address</string>
    <string name="hint_service_address">127.0.0.1</string>
    <string name="service_port">Service Port</string>
    <string name="hint_service_port">5084</string>
    <string name="connect_display">connect_display</string>

</resources>
