<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--&lt;!&ndash;android:text="@string/choice_mem"&ndash;&gt;-->
            <!--android:textSize="20sp" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/tvStyle1"
                android:text="@string/service_address" />

            <EditText
                android:id="@+id/etServiceAddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_service_address"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/tvStyle1"
                android:text="@string/service_port" />

            <EditText
                android:id="@+id/etServicePort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_service_port"
                android:inputType="number"
                android:ems="100"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"/>


        <Button
            android:id="@+id/btnUpload"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_button"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/connect_display"
            android:textSize="20sp" />

    </LinearLayout>


</ScrollView>